--- a/ParticipationMO4/App.config
+++ b/ParticipationMO4/App.config
@@ -6,6 +6,9 @@
         <add name="ParticipationMO4.Properties.Settings.LocalPhoneDBConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LocalPhoneDB.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="ParticipationMO4.Properties.Settings.UVUPhoneNumsWorksConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\3dsju\Downloads\UVUPhoneNumsWorks.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
